Simplify plugin settings